--- a/client/src/app/pages/cookbooks/components/cookbook-header/cookbook-header.component.scss
+++ b/client/src/app/pages/cookbooks/components/cookbook-header/cookbook-header.component.scss
@@ -12,11 +12,16 @@ h2 {
   margin-bottom: 1em;
 
   font-size: 1.7em;
+  text-align: center;
 
   @include theme.apply() using ($variables) {
     border: 1px dashed rgba(map.get($variables, 'foreground'), 0.25);
     border-left: none;
     border-right: none;
+  }
+
+  > mat-icon {
+    flex-shrink: 0;
   }
 
   > span,
